Fix carousel animation on mobile version #27

--- a/app/styles/carousel.css
+++ b/app/styles/carousel.css
@@ -23,7 +23,7 @@ Desktop version
 
 /* Carousel */
   
-.carousel-.carousel-clicked-left-true{
+.carousel-1.carousel-clicked-left-true{
     animation-name: gallery-left-1-t;
     animation-duration: 1s;
 } 
